# dagster_dbt_example

./: .env.example  .gitignore  LICENSE  README.md  dagster.yaml  prompts.txt  pyproject.toml
.github/workflows/: ci.yml
dagster_and_dbt/: assets.py  definitions.py  jobs.py  partitions.py  project.py  resources.py
dagster_and_dbt/dbt/: dbt_project.yml  profiles.yml
dagster_and_dbt/dbt/models/: sources.yml
dagster_and_dbt/dbt/models/marts/: mart_daily_data.sql  mart_weekly_data.sql
dagster_and_dbt/dbt/models/staging/: stg_daily_raw_data.sql  stg_weekly_raw_data.sql
tests/: conftest.py  test_assets.py  test_dbt.py  test_dummy.py  test_integration.py
