[project]
name = "dagster-and-dbt"
version = "0.0.1"
description = "Dagster and dbt"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.*",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-dbt",
    "dbt-duckdb",
    "pandas[parquet]",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.dagster]
module_name = "dagster_and_dbt"
code_location_name = "dagster_and_dbt"

[tool.ruff.lint]
ignore = [
    "ERA001", # comments are fine for a learning environment
    "E501",   # Line too long for docstrings
    "F401",   # unused imports already caught by pylance
]

fixable = ["ALL"]
unfixable = [
    "F401", # dont remove unused imports
]
